[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corridorkey"
version = "0.1.0"
description = "A key management and access control system for corridor-style environments"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "CorridorKey Contributors" }
]
keywords = ["access-control", "key-management", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0",
]

[project.scripts]
corridorkey = "corridorkey.cli:main"

[project.urls]
Homepage = "https://github.com/nikopueringer/CorridorKey"
Repository = "https://github.com/nikopueringer/CorridorKey"
Issues = "https://github.com/nikopueringer/CorridorKey/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/corridorkey"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
# Relaxing strict mode for personal exploration — too noisy while learning the codebase
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Removed --cov-report=xml since I'm only running tests locally and don't need the XML report
# Added -v for more verbose output — easier to see which tests pass/fail at a glance
addopts = "--cov=src/corridorkey --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src/corridorkey"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
